<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FF4986FF"
        android:padding="10dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transferTitle"
            android:textColor="#FFFFFFFF"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/transferForm"
        style="@style/widthBody"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dip"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dip"
        android:visibility="gone" >

        <LinearLayout
            android:id="@+id/transferError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:background="#FFFFA5A7"
            android:padding="10dip"
            android:visibility="gone" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transferError"
                android:textColor="#FFFF0000"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/transferFinished"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:background="#FFB7FFAF"
            android:padding="10dip"
            android:visibility="gone" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transferFinished"
                android:textColor="#FF0DC600"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sourceAccount"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/sourceAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >
                </Spinner>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dip"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/destinationAccount"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/destinationAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >
                </Spinner>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dip"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/amount"
                android:layout_width="200dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:inputType="numberDecimal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currency"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonTransfer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/buttonTransfer" />

        <ProgressBar
            android:id="@+id/progressBarTransfer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dip"
            android:visibility="gone" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBarAccounts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dip"
        android:visibility="gone" />

</LinearLayout>